[gd_scene load_steps=26 format=2]

[ext_resource path="res://MatchGame/scripts/game.gd" type="Script" id=1]
[ext_resource path="res://MatchGame/images/Top UI.png" type="Texture" id=2]
[ext_resource path="res://MatchGame/fonts/score.tres" type="DynamicFont" id=3]
[ext_resource path="res://MatchGame/scripts/score.gd" type="Script" id=4]
[ext_resource path="res://MatchGame/images/time/time0.png" type="Texture" id=5]
[ext_resource path="res://MatchGame/images/time/time1.png" type="Texture" id=6]
[ext_resource path="res://MatchGame/images/time/time2.png" type="Texture" id=7]
[ext_resource path="res://MatchGame/images/time/time3.png" type="Texture" id=8]
[ext_resource path="res://MatchGame/images/time/time4.png" type="Texture" id=9]
[ext_resource path="res://MatchGame/images/time/time5.png" type="Texture" id=10]
[ext_resource path="res://MatchGame/fonts/keyword.tres" type="DynamicFont" id=11]
[ext_resource path="res://MatchGame/scripts/keyword.gd" type="Script" id=12]
[ext_resource path="res://MatchGame/scripts/keyword_timer.gd" type="Script" id=13]
[ext_resource path="res://MatchGame/scripts/grid.gd" type="Script" id=14]
[ext_resource path="res://MatchGame/scripts/wrong_timer.gd" type="Script" id=15]
[ext_resource path="res://MatchGame/fonts/wrong.tres" type="DynamicFont" id=16]
[ext_resource path="res://MatchGame/scripts/correct_timer.gd" type="Script" id=17]
[ext_resource path="res://MatchGame/fonts/correct.tres" type="DynamicFont" id=18]
[ext_resource path="res://MatchGame/scenes/countdown.tscn" type="PackedScene" id=19]
[ext_resource path="res://MatchGame/sounds/wrong.ogg" type="AudioStream" id=20]
[ext_resource path="res://MatchGame/sounds/correct.ogg" type="AudioStream" id=21]
[ext_resource path="res://MatchGame/images/reset_button.png" type="Texture" id=22]
[ext_resource path="res://MatchGame/scenes/restart.tscn" type="PackedScene" id=23]
[ext_resource path="res://MatchGame/scenes/star.tscn" type="PackedScene" id=24]

[sub_resource type="GDScript" id=1]
script/source = "extends Sprite

export (Texture) onready var time_0
export (Texture) onready var time_1
export (Texture) onready var time_2
export (Texture) onready var time_3
export (Texture) onready var time_4
export (Texture) onready var time_5
"

[node name="game" type="Node2D"]
script = ExtResource( 1 )

[node name="top_ui" type="TextureRect" parent="."]
margin_left = 20.9705
margin_top = 3.40117
margin_right = 548.971
margin_bottom = 331.401
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="score" type="Label" parent="top_ui"]
margin_left = 179.239
margin_top = 56.6442
margin_right = 344.24
margin_bottom = 93.6442
grow_horizontal = 2
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.243137, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
align = 1
script = ExtResource( 4 )

[node name="time" type="Sprite" parent="top_ui"]
position = Vector2( 263.947, 214.604 )
texture = ExtResource( 5 )
script = SubResource( 1 )
time_0 = ExtResource( 5 )
time_1 = ExtResource( 6 )
time_2 = ExtResource( 7 )
time_3 = ExtResource( 8 )
time_4 = ExtResource( 9 )
time_5 = ExtResource( 10 )

[node name="keyword" type="Label" parent="."]
margin_left = 31.0
margin_top = 122.0
margin_right = 537.0
margin_bottom = 177.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "KEYWORD"
align = 1
valign = 1
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="keyword_timer" type="Timer" parent="keyword"]
wait_time = 5.0
script = ExtResource( 13 )

[node name="grid" type="Node2D" parent="."]
script = ExtResource( 14 )
width = 7
height = 9
x_start = 60
y_start = 905
offset = 75

[node name="grid_container" type="ColorRect" parent="grid"]
modulate = Color( 1, 1, 1, 0.682353 )
margin_left = 13.0
margin_top = 255.0
margin_right = 563.0
margin_bottom = 955.0
color = Color( 0, 0, 0, 1 )

[node name="wrong_timer" type="Timer" parent="grid"]
script = ExtResource( 15 )

[node name="wrong_message" type="Label" parent="grid/wrong_timer"]
margin_left = 350.907
margin_top = 201.0
margin_right = 555.907
margin_bottom = 241.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color = Color( 1, 0.172549, 0, 1 )
text = "Wrong"
align = 1

[node name="correct_timer" type="Timer" parent="grid"]
script = ExtResource( 17 )

[node name="correct_message" type="Label" parent="grid/correct_timer"]
margin_left = 22.0
margin_top = 201.0
margin_right = 233.0
margin_bottom = 241.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 18 )
custom_colors/font_color = Color( 0, 0.996078, 0.180392, 1 )
text = "Correct"
align = 1

[node name="countdown" parent="." instance=ExtResource( 19 )]

[node name="wrong_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )

[node name="correct_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )

[node name="restart_button" type="Button" parent="."]
margin_left = 12.7556
margin_top = 7.97224
margin_right = 152.756
margin_bottom = 141.972
rect_scale = Vector2( 0.4, 0.4 )
icon = ExtResource( 22 )
flat = true

[node name="restart" parent="." instance=ExtResource( 23 )]
pause_mode = 2

[node name="star" parent="." instance=ExtResource( 24 )]
[connection signal="game_result" from="." to="star" method="_on_game_game_result"]
[connection signal="game_end" from="keyword/keyword_timer" to="grid" method="_on_keyword_timer_game_end"]
[connection signal="game_end" from="keyword/keyword_timer" to="." method="_on_keyword_timer_game_end"]
[connection signal="start_countdown" from="keyword/keyword_timer" to="countdown" method="_on_keyword_timer_start_countdown"]
[connection signal="timeout" from="keyword/keyword_timer" to="keyword/keyword_timer" method="_on_keyword_timer_timeout"]
[connection signal="correct_keyword" from="grid" to="top_ui/score" method="_on_grid_correct_keyword"]
[connection signal="correct_keyword" from="grid" to="grid/correct_timer" method="_on_grid_correct_keyword"]
[connection signal="wrong_keyword" from="grid" to="grid/wrong_timer" method="_on_grid_wrong_keyword"]
[connection signal="timeout" from="grid/wrong_timer" to="grid" method="_on_wrong_timer_timeout"]
[connection signal="timeout" from="grid/wrong_timer" to="grid/wrong_timer" method="_on_wrong_timer_timeout"]
[connection signal="timeout" from="grid/correct_timer" to="grid/correct_timer" method="_on_correct_timer_timeout"]
[connection signal="countdown_end" from="countdown" to="keyword/keyword_timer" method="_on_countdown_countdown_end"]
[connection signal="pressed" from="restart_button" to="restart" method="_on_restart_button_pressed"]
[connection signal="restart_game" from="restart" to="." method="_on_restart_restart_game"]
[connection signal="restart_game" from="star" to="." method="_on_star_restart_game"]
